CHANGES
=======

* Add credential setting logic
* Add API paths to constants file
* Add initial project structure
* Initial commit